--- a/books/pom.xml
+++ b/books/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>javafx-media</artifactId>
             <version>11</version>
         </dependency>
+        <dependency>
+        	<groupId>org.json</groupId>
+        	<artifactId>json</artifactId>
+        	<version>20220924</version>
+        </dependency>
     </dependencies>
 
     <build>
